# tree-sitter-go

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  a.go  binding.gyp  go.cabal  go.mod  go.sum  grammar.js  log.html  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter-go  tree-sitter.json
.github/workflows/: ci.yml  publish.yml
bindings/c/: tree-sitter-go.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_go/: __init__.py  binding.c
bindings/rust/: README.md  build.rs  lib.rs
bindings/swift/TreeSitterGoTests/: TreeSitterGoTests.swift
corpus/: declarations.txt  expressions.txt  literals.txt  statements.txt  types.txt
gomod/: Cargo.toml  binding.gyp  grammar.js  package.json
gomod/bindings/node/: binding.cc  index.js
gomod/bindings/rust/: lib.rs
gomod/corpus/: exclude.txt  go.txt  module.txt  replace.txt  require.txt  retract.txt
gomod/src/: grammar.json  node-types.json  parser.c
queries/: highlights.scm  tags.scm
script/: parse-examples
src/: grammar.json  node-types.json  parser.c
test/corpus/: declarations.txt  errors.txt  expressions.txt  literals.txt  source_files.txt  statements.txt  types.txt
tests/: main.go  what.go
