name:                tree-sitter-go
version:             0.1.0
synopsis:            tree-sitter go language bindings
description:         Please see README.md
homepage:            https://github.com/tree-sitter/tree-sitter-go#readme
author:              Max Brunsfeld, Tim Clem, Rob Rix, Josh Vera, Rick Winfrey
maintainer:          tclem@github.com
copyright:           2017 GitHub
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TreeSitter.Go
  build-depends:       base >= 4.7 && < 5
                     , haskell-tree-sitter
  default-language:    Haskell2010
  c-sources:           src/parser.c

source-repository head
  type:     git
  location: https://github.com/tree-sitter/tree-sitter-go
